@@ -36,7 +36,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
-    implementation 'org.springframework:spring-jdbc:6.2.3'
+    implementation 'org.springframework:spring-jdbc:7.0.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
