@@ -1,3 +1,6 @@
+Dec 04, 2025
+  gff3 writer: no longer exporting genes without a strand
+
 Oct 06, 2025
   fixed scripts
 
